# nammayatri

./: --version  .clinerules  .cursorrules  .envrc  .envrc.backend  .envrc.frontend  .gitattributes  .gitignore  .hlint.yaml  .imgbotconfig  .psc-ide-port  .stan.toml  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ChangeLog.md  Dockerfile  Dockerfile.dep  ENCRYPTION.md  FINANCE_MANAGEMENT_PENDING_ITEMS.md  INVOICE_GENERATION_IMPLEMENTATION.md  Jenkinsfile  LICENSE  MacOs Tahoe Nix fix.md  Makefile  NO_SHOW_CANCELLATION_REVIEW.md  NammaTagConcept.md  README.md  README_RIDE_FLOW.md  Rideflow.md  SOS.md  UPDATE.sql  VEHICLE_VARIANT_MAPPING_ANALYSIS.md  beckn-epass.cabal  buildspec.yml  crowdin.yml  crowdinTranslationGenerator.py  crowdin_python_generator_configuration.json  dummy-fcm.json  (+21 more)
.claude/: settings.local.json
.cursor/: mcp.json
.docker/: docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.husky/: pre-commit
Backend/: .clinerules  .envrc  .gitignore  API_REFERENCE.md  BACKEND_EVALUATION_REPORT.md  CHANGELOG.md  CMRL_V2_IMPLEMENTATION_PLAN.md  Dockerfile  Dockerfile.dep  EXECUTIVE_SUMMARY.md  MIGRATION_RECORD_DOT_SYNTAX.md  Makefile  PRODUCTION_HEALTH_REPORT.md  Profiling.md  README.md  SAFETY_REFACTORING_PLAN.md  VERIFICATION_REPORT.md  cabal.project  cabal.project.driver  cabal.project.local.example  cabal.project.rider  db-check.sh  default.nix  dslLibs.yaml  dump.rdb  flake-module.nix  hie.yaml  multimodal-tech-design.hs  multmodal-flow.hs  onboarding-flows.md  onboarding-revamp-design.md  run-local-dashboard.sh  sos.md  src-read-only-diff-check.sh  stack-hie.yaml  stack.yaml  temp.sh  test-ride-flow.sh
Backend/app/notification-service/: Cargo.toml  build.rs
Backend/app/notification-service/config/dev/: Notification.toml  Registry.toml
Backend/app/notification-service/protos/: notification.proto
Backend/app/notification-service/src/: lib.rs
Backend/app/notification-service/src/notification/: main.rs
Backend/app/notification-service/src/registry/: main.rs
Backend/haskell-cac/rust/cac_client/: CHANGELOG.md  Cargo.toml
Backend/haskell-cac/rust/cac_client/src/: eval.rs  lib.rs
Backend/haskell-cac/rust/cac_client/src/utils/: core.rs
Frontend/: .eslintrc.json  .psc-ide-port  JenkinsFile  README.md  asset-store-script.sh  compress_lottie.sh  copyrightText.txt  default.nix  driverJuspayAssets.sh  format.sh  frontend.code-workspace  frontend.yaml  keyGenerator.py  package.lock.json  packages.dhall  spago.yaml  translations.json  translator.py  updateTranslation.rb  updateTranslation.sh  userJuspayAssets.sh
app/: Main.hs  PSGen.hs  vim-markdown-preview.html
buildtime-analysis/: Readme.md  analyze_build_log.py  visualize_builds.py
deployment-configs/: README.md  app-backend-config.yaml  app-backend-deploy.yaml  app-customer-support-deploy-noauto.yaml  app-secret-template.yaml  beckn-gateway-config.yaml  beckn-gateway-deploy.yaml  beckn-service-monitors.yaml  beckn-transport-allocation-service-deploy.yaml  beckn-transport-deploy.yaml  config.yaml  deploy.yaml  epass-deploy.yaml  fmd-wrapper-config.yaml  secrets.yaml  (+5 more)
(+23082 files in other folders)
