[package]
name = "notification-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "notification"
path = "src/notification/main.rs"

[[bin]]
name = "registry"
path = "src/registry/main.rs"

[dependencies]
async-stream = "0.2"
axum = "0.6.7"
chrono = "0.4.23"
config = "0.13.3"
futures = "0.3.26"
http-body = "0.4.5"
hyper = "0.14.24"
mobc = "0.8.1"
once_cell = "1.17.1"
pin-project = "1.0.12"
prometheus = { version = "0.13.3", features = ["process"] }
prost = "0.11.6"
redis = "0.22.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1.9"
sha256 = "1.1.2"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tonic = "0.8.3"
tower = "0.4.13"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry", "json"] }
uuid = { version = "1.3.0", features = ["v4"] }
warp = "0.3.3"

[build-dependencies]
tonic-build = "0.8.4"
