[workspace]
resolver = "2"

[workspace.dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
actix = "0.13.0"
actix-web = "4.0.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "serde_json", "chrono", "uuid", "postgres_backend"] }
env_logger = "0.8"
log = { version="0.4.20", features = ["kv_unstable_serde"] }
serde = {version = "^1", features = ["derive"]}
serde_json = {version = "1.0"}
derive_more = "^0.99"
base64 = "0.21.2"
urlencoding = "~2.1.2"
chrono = { version = "0.4.26", features = ["serde"] }
uuid = {version = "1.3.4", features = ["v4", "serde"]}
reqwest = { version = "0.11.18", features = ["json"]}
jsonschema = "~0.17"
jsonlogic = "0.5.1"
json-patch = "1.0.0"
rs-snowflake = "0.6.0"
rusoto_kms = "0.48.0"
rusoto_signature = "0.48.0"
bytes = "1.4.0"
rusoto_core = "0.48.0"
rand = "0.8.5"
once_cell = { version = "1.18.0" }
anyhow = { version = "1.0", default-features = false }
# juspay dependencies
dashboard-auth = { git = "ssh://git@ssh.bitbucket.juspay.net/picaf/sdk-rs-utils.git", tag = "v1.5.1"}

[lib]
name = "cac_client"
path = "src/lib.rs"
crate-type = ["cdylib"]

[package]
name = "cac_client"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = { workspace = true }
derive_more = { workspace = true }
actix-web = { workspace = true }
chrono = { workspace = true }
jsonlogic = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
json-patch = { workspace = true }
lazy_static = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
superposition_client = { git = "ssh://git@ssh.bitbucket.juspay.net/picaf/context-aware-config.git", rev = "c603be0" }
